--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="todo"
+        android:label="Task_Reminder"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
